de yml files zijn toegevoegd

--- a/YML files/giteaVM/docker-compose.drone.yml
+++ b/YML files/giteaVM/docker-compose.drone.yml
@@ -10,11 +10,11 @@ services:
       - drone-data:/data
     restart: always
     environment:
-      DRONE_GITEA_SERVER: http://10.24.13.163:3000
+      DRONE_GITEA_SERVER: http://10.24.13.163:3000  # Gitea IP blijft goed
       DRONE_GITEA_CLIENT_ID: 9b26ecee-6c7b-422b-9da6-290b6d9fd1ff
       DRONE_GITEA_CLIENT_SECRET: gto_dosfcrbfvpnpj6n5m2kx4fdfny4ukt2b6uyma4s2bdwgc3ui7a2q
       DRONE_RPC_SECRET: supersekret123
-      DRONE_SERVER_HOST: 10.24.13.163:8080
+      DRONE_SERVER_HOST: 10.24.13.165:8080         # <-- IP van Drone VM!
       DRONE_SERVER_PROTO: http
       DRONE_USER_CREATE: username=Dockeradmin,admin=true
       DRONE_LOGS_DEBUG: true
@@ -30,7 +30,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       DRONE_RPC_PROTO: http
-      DRONE_RPC_HOST: drone-server
+      DRONE_RPC_HOST: drone-server  # Docker netwerk alias, blijft goed
       DRONE_RPC_SECRET: supersekret123
       DRONE_RUNNER_CAPACITY: 2
       DRONE_RUNNER_NAME: runner-01
